--- a/tauri-app/src/index.css
+++ b/tauri-app/src/index.css
@@ -4,9 +4,12 @@
   --color-red: #ef4444;
   --box-shadow-red: 0 5px 12px rgba(239, 68, 68, 0.5);
   --color-blue: #0ea5e9;
+  --box-shadow-blue: 0 5px 12px rgba(14, 165, 233, 0.3);
   --color-white: #fff;
   --color-black: #000;
   --color-orange: #f97316;
+  --padding-desktop: 40px 65px;
+  --padding-mobile: 40px 25px;
 }
 
 * {
