--- a/tauri-app/src/pages/Home/index.css
+++ b/tauri-app/src/pages/Home/index.css
@@ -96,7 +96,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  padding: 18px 15px;
+  padding: 15px 18px;
   margin: 20px;
   box-shadow: 0 4px 3px rgba(0, 0, 0, 0.2);
 }
@@ -119,8 +119,9 @@
 
 .tech-container {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .more-info-container {
@@ -286,6 +287,7 @@
 
   .tech-container {
     flex-direction: column;
+    flex-wrap: nowrap;
   }
 
   .more-info-container {
