--- a/tauri-app/src/pages/Remedies/index.css
+++ b/tauri-app/src/pages/Remedies/index.css
@@ -9,6 +9,50 @@
   flex-wrap: wrap;
 }
 
+.records-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+.records-header h1 {
+  font-family: "Pacifico";
+  font-size: 45px;
+}
+
+.add-records-btn {
+  width: 60px;
+  height: 60px;
+  background: var(--color-blue);
+  font-size: 34px;
+  color: var(--color-white);
+  box-shadow: var(--box-shadow-blue);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  cursor: pointer;
+  z-index: 8;
+}
+
+.close-add-records-btn {
+  width: 60px;
+  height: 60px;
+  background: var(--color-red);
+  font-size: 34px;
+  color: var(--color-white);
+  box-shadow: var(--box-shadow-red);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  cursor: pointer;
+  z-index: 8;
+  transform: rotate(45deg);
+  transition: 0.3s;
+}
+
 .main-remedies-container h1 {
   font-family: "Pacifico";
   font-size: 45px;
@@ -98,6 +142,23 @@
   overflow-y: scroll;
   padding: 5px;
   border-radius: 5px;
+  background: var(--color-white-accent);
+}
+
+.remedy-main-info-container::-webkit-scrollbar {
+  width: 6px;
+}
+
+.remedy-main-info-container::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+}
+
+.remedy-main-info-container::-webkit-scrollbar-thumb {
+  width: 2px;
+  background: var(--color-blue);
+  border-radius: 5px;
+  margin: 0 3px;
 }
 
 .remedy-main-info-container h3 {
@@ -120,6 +181,18 @@
 
 .rd-container i {
   margin-left: 8px;
+}
+
+.add-remedy-container {
+  background: rgba(0, 0, 0, 0.3);
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 @media (max-width: 750px) {
@@ -166,5 +239,21 @@
 
   .rd-container i {
     margin-left: 4px;
+  }
+
+  .add-records-btn {
+    position: fixed;
+    bottom: 140px;
+    right: 30px;
+  }
+
+  .close-add-records-btn {
+    position: fixed;
+    bottom: 140px;
+    right: 30px;
+  }
+
+  .records-header h1 {
+    font-size: 35px;
   }
 }
