--- a/tauri-app/src/pages/Remedies/index.css
+++ b/tauri-app/src/pages/Remedies/index.css
@@ -138,7 +138,7 @@
 }
 
 .remedy-main-info-container {
-  height: 300px;
+  min-height: 300px;
   overflow-y: scroll;
   padding: 5px;
   border-radius: 5px;
