--- a/tauri-app/src/components/AddCardComponent/index.css
+++ b/tauri-app/src/components/AddCardComponent/index.css
@@ -1,7 +1,7 @@
 .main-add-card-container {
   background: var(--color-white);
   width: 500px;
-  min-height: 300px;
+  max-height: 600px;
   position: relative;
   z-index: 7;
   border-radius: 15px;
@@ -21,6 +21,25 @@
   justify-content: space-between;
   align-items: center;
   flex-direction: column;
+  padding: 10px;
+  overflow-y: scroll;
+  min-height: 300px;
+}
+
+.input-form::-webkit-scrollbar {
+  width: 6px;
+}
+
+.input-form::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+}
+
+.input-form::-webkit-scrollbar-thumb {
+  width: 2px;
+  background: var(--color-blue);
+  border-radius: 5px;
+  margin: 0 3px;
 }
 
 .input-form input[type="text"] {
@@ -74,9 +93,9 @@
   border: 2px solid var(--color-blue);
   border-style: dashed;
   border-radius: 15px;
-  width: 100%;
-  height: 100px;
-  margin: 15px 0;
+  width: 90%;
+  min-height: 60px;
+  margin: 15px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -86,9 +105,9 @@
 .form-container-active {
   border: 2px solid var(--color-green);
   border-radius: 15px;
-  width: 100%;
-  height: 100px;
-  margin: 15px 0;
+  width: 90%;
+  min-height: 60px;
+  margin: 15px;
   display: flex;
   justify-content: center;
   align-items: center;
