--- a/tauri-app/src/components/AddRemedyComponent/index.css
+++ b/tauri-app/src/components/AddRemedyComponent/index.css
@@ -29,7 +29,7 @@
   flex-direction: column;
   overflow-y: scroll;
   overflow-x: hidden;
-  max-height: 300px;
+  height: 400px;
 }
 
 .input-form::-webkit-scrollbar {
@@ -101,7 +101,7 @@
   border-style: dashed;
   border-radius: 15px;
   width: 100%;
-  height: 100px;
+  min-height: 60px;
   margin: 15px 0;
   display: flex;
   justify-content: center;
@@ -113,7 +113,7 @@
   border: 2px solid var(--color-green);
   border-radius: 15px;
   width: 100%;
-  height: 100px;
+  min-height: 60px;
   margin: 15px 0;
   display: flex;
   justify-content: center;
@@ -167,7 +167,7 @@
 }
 
 .uploader-content {
-  width: 100%;
+  width: 90%;
 }
 
 @media (max-width: 750px) {
