--- a/tauri-app/src/components/DetailCardComponent/index.css
+++ b/tauri-app/src/components/DetailCardComponent/index.css
@@ -1,12 +1,11 @@
 .main-detail-container {
   width: 500px;
-  min-height: 450px;
+  max-height: 600px;
   background: var(--color-white);
   padding: var(--padding-desktop);
   border-radius: 15px;
   position: relative;
   margin-top: 20px;
-  overflow-y: scroll;
 }
 
 .main-detail-container h1 {
@@ -24,6 +23,24 @@
 .main-detail-container p {
   margin: 20px 0;
   font-family: "Open Sans";
+  max-height: 300px;
+  overflow-y: scroll;
+}
+
+.main-detail-container::-webkit-scrollbar {
+  width: 6px;
+}
+
+.main-detail-container::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+}
+
+.main-detail-container::-webkit-scrollbar-thumb {
+  width: 2px;
+  background: var(--color-blue);
+  border-radius: 5px;
+  margin: 0 3px;
 }
 
 .close-btn {
