--- a/tauri-app/src/components/Navbar/index.css
+++ b/tauri-app/src/components/Navbar/index.css
@@ -72,7 +72,12 @@
   opacity: 1;
 }
 
+.auth_container:focus {
+  outline: none;
+}
+
 .auth_container {
+  border: 0;
   display: flex;
   align-items: center;
   justify-content: center;
