--- a/tauri-app/src/pages/Chat/index.css
+++ b/tauri-app/src/pages/Chat/index.css
@@ -1,8 +1,19 @@
 .main-chat-container {
   padding: var(--padding-desktop);
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-between;
+  align-items: flex-start;
+  position: relative;
+}
+
+.utils-container {
+  width: 35%;
+}
+
+.chat-container {
+  width: 60%;
+  height: 100%;
+  height: 40vh;
 }
 
 @media (max-width: 750px) {
