--- a/tauri-app/src/components/AddCardComponent/index.css
+++ b/tauri-app/src/components/AddCardComponent/index.css
@@ -56,6 +56,20 @@
   margin-right: 40%;
 }
 
+.input-form select {
+  width: 60%;
+  border: none;
+  background: var(--color-slate);
+  padding: 10px 2px;
+  border-radius: 8px;
+  font-family: "Roboto";
+  text-indent: 10px;
+  outline: none;
+  margin-bottom: 10px;
+  margin-right: 40%;
+}
+
+
 .input-form textarea {
   width: 100%;
   border: none;
@@ -66,6 +80,7 @@
   text-indent: 10px;
   outline: none;
   min-height: 80px;
+  margin-bottom: 10px;
 }
 
 .input-form button {
@@ -202,6 +217,12 @@
     width: 100%;
     margin-right: 0;
   }
+
+  .input-form select {
+    width: 100%;
+    margin-right: 0;
+  }
+
 
   .input-form input[type="file"] {
     padding: 10px 0;
