--- a/tauri-app/src/pages/Chat/index.css
+++ b/tauri-app/src/pages/Chat/index.css
@@ -4,16 +4,16 @@
   justify-content: space-between;
   align-items: flex-start;
   position: relative;
+  max-height: 100%;
 }
 
 .utils-container {
-  width: 35%;
+  width: 30%;
 }
 
 .chat-container {
-  width: 60%;
+  width: 70%;
   height: 100%;
-  height: 40vh;
 }
 
 @media (max-width: 750px) {
