--- a/tauri-app/src/components/MobileChat/index.css
+++ b/tauri-app/src/components/MobileChat/index.css
@@ -1,13 +1,21 @@
-.chat-component-container {
+.m-chat-m-container {
+  width: 320px;
+  height: 440px;
+  background: var(--color-white);
+  border-radius: 15px;
+  padding: 8px;
+}
+
+.m-chat-component-container {
   box-shadow: var(--box-shadow-black);
   border-radius: 15px;
   padding: 20px;
-  width: 100%;
+  width: 80%;
   height: 100%;
   min-height: 500px;
 }
 
-.chat-message-input-container {
+.m-chat-message-input-container {
   width: 100%;
   padding: 15px 0px;
   display: flex;
@@ -15,9 +23,9 @@
   align-items: center;
 }
 
-.chat-message-input-container input {
-  width: 85%;
-  padding: 12px 8px;
+.m-chat-message-input-container input {
+  width: 65%;
+  padding: 8px 5px;
   background: var(--color-slate-accent);
   border: none;
   border-radius: 25px;
@@ -27,7 +35,7 @@
   text-indent: 8px;
 }
 
-.chat-message-input-container button {
+.m-chat-message-input-container button {
   width: 40px;
   height: 40px;
   border: none;
@@ -39,29 +47,28 @@
   outline: none;
 }
 
-.chats-container {
-  width: 98%;
+.m-chats-container {
+  width: 90%;
   background: var(--color-light-grey);
-  height: 85%;
   padding: 12px;
   border-radius: 15px 5px 5px 15px;
   margin: 0 auto;
   overflow-y: scroll;
   overflow-x: hidden;
-  height: 600px;
+  height: 350px;
 }
 
-.chats-container::-webkit-scrollbar {
+.m-chats-container::-webkit-scrollbar {
   width: 6px;
 }
 
-.chats-container::-webkit-scrollbar-track {
+.m-chats-container::-webkit-scrollbar-track {
   box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1);
   border-radius: 0 15px 15px 0;
   transform: translateX(-4px);
 }
 
-.chats-container::-webkit-scrollbar-thumb {
+.m-chats-container::-webkit-scrollbar-thumb {
   width: 2px;
   background: var(--color-blue);
   border-radius: 0 5px 5px 0;
@@ -76,19 +83,19 @@
 .msg-f {
   width: max-content;
   background: var(--color-light-green);
-  font-family: "Roboto";
+  font-family: "Open Sans";
   padding: 4px 10px;
   border-radius: 8px 8px 8px 0px;
   margin-right: auto;
-  max-width: 400px;
+  max-width: 200px;
 }
 
 .msg-t {
   width: max-content;
   background: var(--color-light-blue);
-  font-family: "Roboto";
+  font-family: "Open Sans";
   padding: 4px 10px;
   border-radius: 8px 8px 0px 8px;
   margin-left: auto;
-  max-width: 400px;
+  max-width: 200px;
 }
