--- a/tauri-app/src/components/Navbar/index.css
+++ b/tauri-app/src/components/Navbar/index.css
@@ -104,6 +104,37 @@
   margin-left: 10px;
 }
 
+.did-container {
+  width: 200px;
+  height: 150px;
+  background: var(--color-white);
+  box-shadow: var(--box-shadow-black);
+  position: absolute;
+  top: 100px;
+  right: 45px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 8px;
+  border-radius: 5px;
+}
+
+.did-container .auth_container {
+  background: var(--color-red);
+  box-shadow: var(--box-shadow-red);
+}
+
+.did-container input {
+  background: var(--color-slate-accent);
+  border-radius: 5px;
+  border: none;
+  font-family: "Roboto";
+  outline: none;
+  padding: 8px 4px;
+  margin: 14px 0px;
+}
+
 @media (max-width: 750px) {
   .main_navbar_container {
     padding: 15px 25px;
