--- a/tauri-app/src/components/UserFriendList/index.css
+++ b/tauri-app/src/components/UserFriendList/index.css
@@ -20,6 +20,22 @@
   border-radius: 5px;
 }
 
+.friend-tag-container span {
+  font-family: "Roboto";
+  background: var(--color-red);
+  border-radius: 3px;
+  padding: 2px 3px;
+  color: var(--color-white);
+  border: 2px solid var(--color-white);
+  border-radius: 8px;
+
+  font-size: 8px;
+  position: relative;
+  left: -5px;
+  width: 20px;
+  height: 20px;
+}
+
 .friends-list-container hr {
   width: 60%;
   margin: 0 auto;
@@ -42,7 +58,6 @@
 }
 
 .friends-list-header {
-  background: var(--color-blue);
   padding: 8px 12px;
   border-radius: 10px;
   color: var(--color-white);
@@ -52,7 +67,7 @@
 
 .friend-main-list-container {
   overflow-y: scroll;
-  height: 300px;
+  height: 250px;
   margin: 15px 0;
   padding: 5px;
 }
