--- a/tauri-app/src/pages/Chat/index.css
+++ b/tauri-app/src/pages/Chat/index.css
@@ -1,14 +1,14 @@
 .main-chat-container {
   padding: var(--padding-desktop);
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: flex-start;
   position: relative;
   max-height: 100%;
 }
 
 .utils-container {
-  width: 30%;
+  width: 25%;
 }
 
 .chat-container {
@@ -16,8 +16,17 @@
   height: 100%;
 }
 
-@media (max-width: 750px) {
-  .main-chat-container {
-    padding: var(--padding-mobile);
-  }
+.data-container {
+  background: rgba(0, 0, 0, 0.3);
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 7;
 }
+
+@media (max-width: 750px) {}
