--- a/tauri-app/src/components/UserMobileFriendList/index.css
+++ b/tauri-app/src/components/UserMobileFriendList/index.css
@@ -26,16 +26,32 @@
   font-family: "Roboto";
   background: var(--color-red);
   border-radius: 3px;
-  padding: 2px 3px;
+  padding: 2px 4px;
   color: var(--color-white);
   border: 2px solid var(--color-white);
   border-radius: 8px;
-  font-size: 8px;
+  font-size: 10px;
   position: relative;
-  left: -15px;
-  top: -4px;
   width: 40px;
+  top: -25px;
   height: 40px;
+}
+
+.m-friend-tag-container input {
+  background: var(--color-white);
+  border-radius: 5px;
+  border: none;
+  font-family: "Roboto";
+  outline: none;
+  padding: 8px 4px;
+  margin: 14px 0px;
+  margin-right: 8px;
+}
+
+.m-did-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .m-friends-list-container hr {
